# mlops-ci-cd

./: .gitignore  Dockerfile  README.md  dvc.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  dvc_pipeline.yml
reports/: .gitignore  ge_validation.json
src/mlops_ci_cd/api/: main.py
src/mlops_ci_cd/data/: generate.py  validate.py
src/mlops_ci_cd/model/: registry.py  train.py
src/tests/: test_pipeline_smoke.py
