[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-ci-cd"
version = "0.1.0"
description = "CI/CD workflows for MLOps: data validation, training, and deployment."
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Taranjyot Singh"}]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
addopts = "-q"
